@@ -1,3 +1,6 @@
+2018-01-22  Daniel Hawkins
+    * server/plugins.c: Fix redundant call to va_end in cfapi_object_move.
+
 2018-01-21  Daniel Hawkins
     * common/init.c: Use strspn for finding the first non-whitespace character in attackmess,
       and allow for tabs to be used as whitespace.
